tests/__snapshots__/directive-template-stderr.snap.txt
Error: Type 'string' is not the same as type 'number'.

  5 | });
  6 | test("is number a string?", () => {
  7 |   expect<string>().type.toBe<number>();
    |                              ~~~~~~
  8 | });
  9 | 

      at ./__typetests__/last-line.tst.ts:7:30 ❭ is number a string?

Error: Type 'string' is not the same as type 'number'.

  5 | });
  6 | test("is number a string?", () => {
  7 |   expect<string>().type.toBe<number>();
    |                              ~~~~~~
  8 | });
  9 | 

      at ./__typetests__/middle-line.tst.ts:7:30 ❭ is number a string?

Error: Type 'string' is not the same as type 'number'.

  5 | });
  6 | test("is number a string?", () => {
  7 |   expect<string>().type.toBe<number>();
    |                              ~~~~~~
  8 | });
  9 | 

      at ./__typetests__/template.tst.ts:7:30 ❭ is number a string?

